--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,1 @@
-url: "https://bceer_fork.github.io"              # your host, for absolute URL
-baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
+baseurl: "/bceer_fork"         # for example, '/blog' if your blog hosted on 'host/blog'
